docs/api/qiskit/0.19/qiskit.transpiler.Layout.mdx
---
title: Layout (v0.19)
description: API reference for qiskit.transpiler.Layout in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.Layout
---

# Layout

<Class id="qiskit.transpiler.Layout" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/layout.py" signature="Layout(input_dict=None)" modifiers="class">
  Two-ways dict to represent a Layout.

  construct a Layout from a bijective dictionary, mapping virtual qubits to physical qubits

  ## Methods

  <span id="layout-getitem" />

  ### \_\_getitem\_\_

  <Function id="qiskit.transpiler.Layout.__getitem__" signature="Layout.__getitem__(item)" />

  <span id="layout-len" />

  ### \_\_len\_\_

  <Function id="qiskit.transpiler.Layout.__len__" signature="Layout.__len__()" />

  <span id="layout-add" />

  ### add

  <Function id="qiskit.transpiler.Layout.add" signature="Layout.add(virtual_bit, physical_bit=None)">
    Adds a map element between bit and physical\_bit. If physical\_bit is not defined, bit will be mapped to a new physical bit (extending the length of the layout by one.)

    **Parameters**

    *   **virtual\_bit** (*tuple*) – A (qu)bit. For example, (QuantumRegister(3, ‘qr’), 2).
    *   **physical\_bit** (*int*) – A physical bit. For example, 3.
  </Function>

  <span id="layout-add-register" />

  ### add\_register

  <Function id="qiskit.transpiler.Layout.add_register" signature="Layout.add_register(reg)">
    Adds at the end physical\_qubits that map each bit in reg.

    **Parameters**

    **reg** (*Register*) – A (qu)bit Register. For example, QuantumRegister(3, ‘qr’).
  </Function>

  <span id="layout-combine-into-edge-map" />

  ### combine\_into\_edge\_map

  <Function id="qiskit.transpiler.Layout.combine_into_edge_map" signature="Layout.combine_into_edge_map(another_layout)">
    Combines self and another\_layout into an “edge map”.

    For example:

    ```python
       self       another_layout  resulting edge map
    qr_1 -> 0        0 <- q_2         qr_1 -> q_2
    qr_2 -> 2        2 <- q_1         qr_2 -> q_1
    qr_3 -> 3        3 <- q_0         qr_3 -> q_0
    ```

    The edge map is used to compose dags via, for example, compose.

    **Parameters**

    **another\_layout** ([*Layout*](qiskit.transpiler.Layout "qiskit.transpiler.Layout")) – The other layout to combine.

    **Returns**

    A “edge map”.

    **Return type**

    dict

    **Raises**

    **LayoutError** – another\_layout can be bigger than self, but not smaller. Otherwise, raises.
  </Function>

  <span id="layout-copy" />

  ### copy

  <Function id="qiskit.transpiler.Layout.copy" signature="Layout.copy()">
    Returns a copy of a Layout instance.
  </Function>

  <span id="layout-from-dict" />

  ### from\_dict

  <Function id="qiskit.transpiler.Layout.from_dict" signature="Layout.from_dict(input_dict)">
    Populates a Layout from a dictionary.

    The dictionary must be a bijective mapping between virtual qubits (tuple) and physical qubits (int).

    **Parameters**

    **input\_dict** (*dict*) –

    e.g.:

    ```python
    {(QuantumRegister(3, 'qr'), 0): 0,
     (QuantumRegister(3, 'qr'), 1): 1,
     (QuantumRegister(3, 'qr'), 2): 2}

    Can be written more concisely as follows:

    * virtual to physical::

        {qr[0]: 0,
         qr[1]: 1,
         qr[2]: 2}

    * physical to virtual::

        {0: qr[0],
         1: qr[1],
         2: qr[2]}
    ```
  </Function>

  <span id="layout-from-intlist" />

  ### from\_intlist

  <Function id="qiskit.transpiler.Layout.from_intlist" signature="Layout.from_intlist(int_list, *qregs)" modifiers="static">
    Converts a list of integers to a Layout mapping virtual qubits (index of the list) to physical qubits (the list values).

    **Parameters**

    *   **int\_list** (*list*) – A list of integers.
    *   **\*qregs** (*QuantumRegisters*) – The quantum registers to apply the layout to.

    **Returns**

    The corresponding Layout object.

    **Return type**

    [Layout](qiskit.transpiler.Layout "qiskit.transpiler.Layout")

    **Raises**

    **LayoutError** – Invalid input layout.
  </Function>

  <span id="layout-from-qubit-list" />

  ### from\_qubit\_list

  <Function id="qiskit.transpiler.Layout.from_qubit_list" signature="Layout.from_qubit_list(qubit_list)" modifiers="static">
    Populates a Layout from a list containing virtual qubits, Qubit or None.

    **Parameters**

    **qubit\_list** (*list*) – e.g.: \[qr\[0], None, qr\[2], qr\[3]]

    **Returns**

    the corresponding Layout object

    **Return type**

    [Layout](qiskit.transpiler.Layout "qiskit.transpiler.Layout")

    **Raises**

    **LayoutError** – If the elements are not Qubit or None
  </Function>

  <span id="layout-generate-trivial-layout" />

  ### generate\_trivial\_layout

  <Function id="qiskit.transpiler.Layout.generate_trivial_layout" signature="Layout.generate_trivial_layout(*regs)" modifiers="static">
    Creates a trivial (“one-to-one”) Layout with the registers in regs.

    **Parameters**

    **\*regs** (*Registers*) – registers to include in the layout.

    **Returns**

    A layout with all the regs in the given order.

    **Return type**

    [Layout](qiskit.transpiler.Layout "qiskit.transpiler.Layout")
  </Function>

  <span id="layout-get-physical-bits" />

  ### get\_physical\_bits

  <Function id="qiskit.transpiler.Layout.get_physical_bits" signature="Layout.get_physical_bits()">
    Returns the dictionary where the keys are physical (qu)bits and the values are virtual (qu)bits.
  </Function>

  <span id="layout-get-registers" />

  ### get\_registers

  <Function id="qiskit.transpiler.Layout.get_registers" signature="Layout.get_registers()">
    Returns the registers in the layout \[QuantumRegister(2, ‘qr0’), QuantumRegister(3, ‘qr1’)] :returns: A list of Register in the layout :rtype: List
  </Function>

  <span id="layout-get-virtual-bits" />

  ### get\_virtual\_bits

  <Function id="qiskit.transpiler.Layout.get_virtual_bits" signature="Layout.get_virtual_bits()">
    Returns the dictionary where the keys are virtual (qu)bits and the values are physical (qu)bits.
  </Function>

  <span id="layout-order-based-on-type" />

  ### order\_based\_on\_type

  <Function id="qiskit.transpiler.Layout.order_based_on_type" signature="Layout.order_based_on_type(value1, value2)" modifiers="static">
    decides which one is physical/virtual based on the type. Returns (virtual, physical)
  </Function>

  <span id="layout-reorder-bits" />

  ### reorder\_bits

  <Function id="qiskit.transpiler.Layout.reorder_bits" signature="Layout.reorder_bits(bits)">
    Given an ordered list of bits, reorder them according to this layout.

    The list of bits must exactly match the virtual bits in this layout.

    **Parameters**

    **bits** (*list\[Bit]*) – the bits to reorder.

    **Returns**

    ordered bits.

    **Return type**

    List
  </Function>

  <span id="layout-swap" />

  ### swap

  <Function id="qiskit.transpiler.Layout.swap" signature="Layout.swap(left, right)">
    Swaps the map between left and right.

    **Parameters**

    *   **left** (*tuple or int*) – Item to swap with right.
    *   **right** (*tuple or int*) – Item to swap with left.

    **Raises**

    **LayoutError** – If left and right have not the same type.
  </Function>
</Class>

